# YT-ab-back

./: README.md
cache-server/: CMakeLists.txt  CMakeListsTest.txt
cache-server/cert/: temp_cert.crt  temp_key.key
cache-server/cmake/: FindLibreSSL.cmake
cache-server/src/: notes.txt
cache-server/src/cache/: README.md  linked_list.cpp  linked_list.h  lru_cache.cpp  lru_cache.h  lru_cache_test.cpp
cache-server/src/controller/: MyController.hpp
cache-server/src/database/: cache_db_handler.cpp  cache_db_handler.h  nb_db.cpp  nb_db.h  type-oid.txt
cache-server/src/server/: App.cpp  AppComponent.hpp
cache-server/src/server/controller/: MyController.cpp  MyController.hpp
data-server/clients/: CCApiClient.hpp
data-server/controller/: MyController.cpp
data-server/db/: nb_db.h  notes.txt
data-server/dto/: MyDTOs.hpp
exposed-server/: .CMakeLists.txt.swp  CMakeLists.txt
exposed-server/cert/: temp_cert.crt  temp_key.key
exposed-server/src/: AppComponent.hpp
exposed-server/src/clients/: GraphApiClient.hpp
exposed-server/src/database/: nb_db.cpp  nb_db.h
exposed-server/src/db/: nb_db.cpp  nb_db.h
exposed-server/src/security/: input_validation.h  salting.cpp  salting.h
exposed-server/src/server/: AppComponent.hpp
exposed-server/src/server/clients/: CCApiClient.hpp
exposed-server/src/server/controller/: MyController.cpp  MyController.hpp
exposed-server/src/user/: .userHandler.cpp.swp  userHandler.cpp  userHandler.h
utility/: install-oatpp-modules.sh  install-oatpp-modules3.sh
